<resources>
    <string name="app_name">Company College</string>
    <string name="tutorial">Tutorial</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="lorem_ipsum2">Lorem Ipsum is simply dummy text</string>
    <string name="lorem_ipsum3">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="next">Next</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_in">Log In</string>
    <string name="silahkan_masukkan">Silahkan masukan email dan password anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_name">Nama Anda</string>
    <string name="alamat">Alamat</string>
    <string name="usaha">Usaha</string>
    <string name="profile">Profile</string>
    <string name="proposal">Proposal</string>
    <string name="profile_usaha">Profile Usaha</string>
    <string name="nama_usaha_anda">Nama Usaha Anda</string>
    <string name="nama_brand">Nama Brand</string>
    <string name="profile_user">Profile User</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="nama">Nama</string>
    <string name="no_hp">No HP</string>
    <string name="jabatan">Jabatan</string>
    <string name="lorem_ipsum_is_com">lorem_ipsum@is.com</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="riwayat_penjualan">Riwayat Penjualan</string>
    <string name="profil_kelayakan_bisnis">Profil Kelayakan Bisnis</string>
    <string name="profile_management">Profile Management</string>
    <string name="riwayat_kemitraan">Riwayat Kemitraan</string>
    <string name="rencana_pengembangan_usaha">Rencana Pengembangan Usaha</string>
    <string name="lampiran">Lampiran</string>
    <string name="lampiran_i_sesuai_juknis">Lampiran I Sesuai Juknis</string>
    <string name="lampiran_ii_sesuai_juknis">Lampiran II Sesuai Juknis</string>
    <string name="lampiran_iii_sesuai_juknis">Lampiran III Sesuai Juknis</string>
    <string name="lampiran_iv_sesuai_juknis">Lampiran IV Sesuai Juknis</string>
    <string name="lampiran_v_sesuai_juknis">Lampiran V Sesuai Juknis</string>
    <string name="budi_setiawan">Budi Setiawan</string>
    <string name="manajer_keuangan">Manajer Keuangan</string>
    <string name="abcabc_gmail_com">abcabc@gmail.com</string>
</resources>