<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@color/colorGray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/futura"
        android:text="@string/log_in"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/calibri"
        android:gravity="center"
        android:text="@string/silahkan_masukkan"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_form"
        android:fontFamily="@font/futura"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:inputType="textPassword"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_form"
        android:fontFamily="@font/futura"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/futura"
        android:text="@string/lupa_password"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bellmt"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/colorGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/login_register"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_create_account"
        android:fontFamily="@font/bellmt"
        android:text="@string/buat_akun"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/lorem_ipsum2"
        android:fontFamily="@font/futura"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>