<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity"
    android:background="@color/colorGray">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/futura"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_SignUpNama"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/input_form"
        android:fontFamily="@font/futura"
        android:hint="@string/your_name"
        android:paddingLeft="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_SignUpEmail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_form"
        android:fontFamily="@font/futura"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_SignUpNama" />

    <EditText
        android:id="@+id/et_SignUpPassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_form"
        android:fontFamily="@font/futura"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_SignUpEmail" />

    <EditText
        android:id="@+id/et_SignUpAlamat"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_form"
        android:fontFamily="@font/futura"
        android:hint="@string/alamat"
        android:paddingLeft="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_SignUpPassword" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bellmt"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_SignUpAlamat" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/futura"
        android:gravity="center"
        android:text="@string/lorem_ipsum3"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

    <Button
        android:id="@+id/register_backLogin"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_back_signup"
        android:fontFamily="@font/bellmt"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>